# module10

./: CMakeLists.txt  setup.py  test_vector.py  vectors_class.cp313-win_amd64.pyd
src/: main.cpp  vector3d.cpp  vector3d.h
vectors_class.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
